--- a/Cornerstone-1.4.2/assets/scss/fonts/_clear-sans.scss
+++ b/Cornerstone-1.4.2/assets/scss/fonts/_clear-sans.scss
@@ -1,3 +1,4 @@
+/*
 @font-face {
     font-family: "Clear Sans";
     font-style: normal;
@@ -13,3 +14,4 @@
     src: url("../fonts/clearsans-bold-webfont.woff2") format("woff2"),
          url("../fonts/clearsans-bold-webfont.woff") format("woff");
 }
+*/
