--- a/Cornerstone-1.4.2/templates/components/common/footer.html
+++ b/Cornerstone-1.4.2/templates/components/common/footer.html
@@ -7,53 +7,44 @@
 {{/if}}
 <footer class="footer" role="contentinfo">
     <div class="container">
-        <section class="footer-info">
-            <article class="footer-info-col footer-info-col--small" data-section-type="footer-webPages">
-                <h5 class="footer-info-heading">{{lang 'footer.navigate'}}</h5>
-                <ul class="footer-info-list">
-                    {{#each pages}}
-                    <li>
-                        <a href="{{url}}">{{name}}</a>
-                    </li>
-                    {{/each}}
-                    <li>
-                        <a href="{{urls.sitemap}}">{{lang 'sitemap.page_title'}}</a>
-                    </li>
-                </ul>
-            </article>
-
-            <article class="footer-info-col footer-info-col--small" data-section-type="footer-categories">
-                <h5 class="footer-info-heading">{{lang 'footer.categories'}}</h5>
-                <ul class="footer-info-list">
-                    {{#each categories}}
-                        <li>
-                            <a href="{{url}}">{{name}}</a>
-                        </li>
-                    {{/each}}
-                </ul>
-            </article>
-
-            <article class="footer-info-col footer-info-col--small" data-section-type="footer-brands">
-                <h5 class="footer-info-heading">{{lang 'footer.brands'}}</h5>
-                <ul class="footer-info-list">
-                    {{#each shop_by_brand}}
-                        <li>
-                            <a href="{{url}}">{{name}}</a>
-                        </li>
-                    {{/each}}
-                    <li><a href="{{urls.brands}}">{{lang 'common.view_all'}}</a></li>
-                </ul>
-            </article>
-
-            <article class="footer-info-col footer-info-col--small" data-section-type="storeInfo">
-                <h5 class="footer-info-heading">{{lang 'footer.info'}}</h5>
-                <address>{{nl2br settings.address}}</address>
-                {{#if settings.phone_number}}
-                    <strong>{{lang 'footer.call_us' phone_number=settings.phone_number}}</strong>
+        <section class="footer-row">
+            <article class="footer-col-left">
+                <div class="footer_logo"> {{> components/common/store-logo}}</div>
+                {{#if theme_settings.show_powered_by}}
+                <div class="footer-copyright">
+                    <p>© PWC Engine. 2017 <br> Created by <a href="http://maxburst.com/">Maxburst</a></p>
+                </div>
                 {{/if}}
             </article>
-
-            <article class="footer-info-col" data-section-type="newsletterSubscription">
+            
+            <div class="footer-col-center">
+                <article class="col-half" data-section-type="footer-categories">
+                    <h5 class="footer-info-heading">{{lang 'footer.categories'}}</h5>
+                    <ul class="footer_link_list">
+                        {{#each categories}}
+                        <li>
+                            <a href="{{url}}">{{name}}</a>
+                        </li>
+                        {{/each}}
+                    </ul>
+                </article>
+    
+                <article class="col-half" data-section-type="footer-webPages">
+                    <h5 class="footer-info-heading">{{lang 'footer.navigate'}}</h5>
+                    <ul class="footer_link_list">
+                        {{#each pages}}
+                        <li>
+                            <a href="{{url}}">{{name}}</a>
+                        </li>
+                        {{/each}}
+                        <li>
+                            <a href="{{urls.sitemap}}">{{lang 'sitemap.page_title'}}</a>
+                        </li>
+                    </ul>
+                </article>
+            </div>
+            
+            <article class="footer-col-right" data-section-type="newsletterSubscription">
                 {{#if settings.show_newsletter_box}}
                     {{> components/common/subscription-form}}
                 {{/if}}
@@ -61,18 +52,14 @@
                 {{> components/common/payment-icons}}
             </article>
         </section>
-        {{#if theme_settings.show_powered_by}}
-            <div class="footer-copyright">
-                <p class="powered-by">Powered by <a href="http://bigcommerce.com" rel="nofollow">BigCommerce</a></p>
-            </div>
-        {{/if}}
-        {{#if theme_settings.show_copyright_footer}}
+        
+        <!--{{#if theme_settings.show_copyright_footer}}
             <div class="footer-copyright">
                 <p class="powered-by">&copy; <span id="copyright_year"></span> {{settings.store_name}} </p>
             </div>
             <script type="text/javascript">
                 document.getElementById("copyright_year").innerHTML = new Date().getFullYear();
             </script>
-        {{/if}}
+        {{/if}}-->
     </div>
 </footer>
