--- a/Cornerstone-1.4.2/templates/layout/base.html
+++ b/Cornerstone-1.4.2/templates/layout/base.html
@@ -10,7 +10,7 @@
         {{{stylesheet '/assets/css/theme.css'}}}
         {{ getFontsCollection }}
         <script src="{{cdn '/assets/modernizr-custom.js'}}"></script>
-
+        <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,700,800,900" rel="stylesheet">
         {{{head.scripts}}}
         {{{head.rsslinks}}}
 
@@ -42,3 +42,5 @@
         {{{snippet 'footer'}}}
     </body>
 </html>
+
+
